
Make Automatic Sound Dump functionality of PinMAME(32) more robust in its silence detection

*** CORE/CPU ***
One more audiophile tweak: added proper dithering after resampling to the final output sample rate
Fixed regression in solenoid emulation for Juegos Populares
Corrected NVRAM size for Mr. Game
Fixed flasher sense for Pistol Poker (and maybe other Alvin G. games?)

*** ROM SUPPORT *** Thanks to Brent Walker, inkochnito, ipdb.org, Victor Fernandez (City Game), StrangeLeo75, Flipprojets.fr, Clay Harrell
New:
Alvin G.: U.S.A. Football (Redemption, P08)

Correct Dumps:
Mac Attack
Riverboat Gambler PA-7 (using L-1 sound now, might still be too new, but better than L-2 anyhow)
Tales of the Arabian Nights 0.4 Prototype (see above)

Clones:
A.G. Soccer-Ball & Football R18u with 2.5L Sound (only the latter is new, 2.4 revision, inside the ROM it says 2.5L though)
Bad Cats LG-4
Flintstones, The LA-5
Lucky Draw (alternate version - only difference is the #3 ROM)
Mach 2 (alternate set)
Monte Carlo (French Millions option, Free Play)
Monte Carlo (German Millions option, Free Play)
Monte Carlo (rev. 2 Millions option, Free Play)
No Fear 0.8X with SL-1 Sound
Theatre of Magic 1.2A
Waterworld (rev. 5) (which makes this the newest we have :))



Version 3.3 (December 24th, 2020) - "20 years already?"
------------------------------------------------------------------------------

Compiling for mac/iOS is now possible.
Also a new platform independent lib/dll is now available with a new, simple interface to request (some of) the internal data.
Fix -listxml for strings that contain embedded tags

pinPROC : updated library;  VS2019 build
YAML-cpp: updated to 0.6.3; VS2019 build

Updated LISY support to 5.26-41 (Linux for Gottlieb System1 & System80, Bally, Atari, Williams and 'HOme' Pinballs)
